@@ -42,11 +42,6 @@
 		    <version>4.3.2</version>
 		    <type>pom</type>
 		</dependency>
-			<dependency>
-		    <groupId>org.aksw.jena-sparql-api</groupId>
-		    <artifactId>jena-sparql-api-update</artifactId>
-		    <version>3.17.0-1</version>
-		</dependency>
 		<dependency>
 		    <groupId>org.apache.jena</groupId>
 		    <artifactId>jena-rdfconnection</artifactId>
@@ -84,7 +79,7 @@
 		</dependency>
 		<dependency>
 		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-params</artifactId>
+		    <artifactId>junit-jupiter-api</artifactId>
 		    <version>5.9.1</version>
 		    <scope>test</scope>
 		</dependency>
@@ -105,6 +100,15 @@
 	        </configuration>
             <version>3.10.1</version>
 	     </plugin>
+	     <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+        </plugin>
+        <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-site-plugin</artifactId>
+		    <version>3.7.1</version>
+		</plugin>
     </plugins>
     <pluginManagement>
       <plugins>
@@ -112,11 +116,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M7</version>
-           <configuration>
-                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
-                <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
-            </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
